<resources>

    <string name="app_name">Park Man</string>
    <string name="btn_login">Connect</string>
    <string name="server_ip">192.168.1.143</string>
    <string name="rights">All rights reserved.</string>
    <string name="version">Version</string>
    <string name="company_name">Some Company Ltd.</string>
    <string name="copy_right">Copyright \u00A9</string>
    <string name="build_year">2015</string>
    
   <string name="search_hint">Search for site</string>
     <string name="retry">Retry</string>  
     <string name="refresh">Refresh</string>
     <string name="reload_site_list">Reload Site List</string>
     <string name="none"></string>
  <!-- Errors -->
  	<string name="conn_refuse">Connection attempt to Park Man Services was rejected. The services may be down, or your network may not be properly configured</string>
     
</resources>