<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <!-- Header Starts -->


        <!-- Header Ends -->


        <!-- Footer Start -->
        <!-- Place footer next to header to set z-index property to minus value -->
        <!-- Footer Ends -->


        <!-- Login Form -->

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:padding="10dip" >

            <!-- Email Label -->

            <EditText
                android:id="@+id/editTextUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:ems="10"
                android:hint="@string/server_ip"
                android:inputType="text"
                android:singleLine="true"
                android:textSize="18sp" >
            </EditText>

            <!-- Password Label -->


            <!--
                 <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dip"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="18sp" />
                
            -->
            <!-- Login button -->

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:background="@drawable/custom_btn_black_pearl"
                android:onClick="login"
                android:text="@string/btn_login" />
        </LinearLayout>
        <!-- Login Form Ends -->

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout1"
            android:layout_centerHorizontal="true"
            android:text="@string/app_name"
            android:textIsSelectable="false"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="17dp"
            android:contentDescription="@string/none"
            android:src="@drawable/logo72x72" />

    <TextView
        android:id="@+id/coyRightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/rights"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textIsSelectable="false" />

    </RelativeLayout>

</ScrollView>